@@ -57,6 +57,8 @@ Date : 08.17.2010 | Release : 0.6.13    | Author  : H.Weber | CVS:244
 Changes:
 
 - Update makemkv to version 1.5.8 
+- Do check during setup if handbrake or makemkv is allready installed
+
 
 Fixes:
 
